added almost all of the project content

--- a/content/projects/scouting-server.mdx
+++ b/content/projects/scouting-server.mdx
@@ -7,4 +7,4 @@ year: 2020
 
 A lot of stuff done for the scouting server. We really did a lot for the <Link href="https://team1676.com/" underline="hover" target="_blank">Team 1676: The Pascack Pi-Oneers</Link>.
 
-Look at this markdown stuff!
+This has been an ongoing project since my freshman year of high school (2016) up until 2020 (graduation), with each iteration improving on the one from before.
