updated content for crc, kadmon, and workstream

--- a/content/jobs/crc.mdx
+++ b/content/jobs/crc.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Cornell Cup Robotics"
-role: "Minibot Developer"
+role: "Minibot CS Developer"
 startDate: "2021-02"
 endDate: "2021-09"
 isCurrent: false
 ---
 
-- Did some stuff
-- Also did some stuff
-- Again, did some stuff
+- Revamped the Minibot interface, a robot for children to learn about robotics, using React and Figma
+- Ran user testing and feedback sessions with non-CS members and integrated feedback in designs
+- Eliminated excessive page scrolling/whitespace and reduced distance between elements by about 50%
