--- a/content/jobs/kadmon.mdx
+++ b/content/jobs/kadmon.mdx
@@ -6,6 +6,6 @@ endDate: "2020-07"
 isCurrent: false
 ---
 
-- Did some stuff
-- Also did some stuff
-- Again, did some stuff
+- Predicted positive protein crystallization conditions with 90% accuracy of prediction over last generation with reinforcement learning algorithms
+- Researched and presented basic machine learning findings for use in drug development to the department
+- Experimented with protein modeling and molecular dynamics using Molecular Operating Environment (MOE)
