--- a/content/jobs/workstream.mdx
+++ b/content/jobs/workstream.mdx
@@ -6,6 +6,6 @@ endDate: "2021-08"
 isCurrent: false
 ---
 
-- Did some stuff
-- Also did some stuff
-- Again, did some stuff
+- Developed an onboarding module for state tax withholding forms with HelloSign for use by over 100 businesses
+- Designed/wrote APIs for dynamic search of ADP workers and included extra data submission in a form to ADP
+- Resolved bugs and high priority tickets as reported by customer service, wrote tests for backend
