added projectry and discord bot

--- a/content/projects/projectry.mdx
+++ b/content/projects/projectry.mdx
@@ -1,8 +1,12 @@
 ---
 title: "Projectry"
 githubLink: "https://github.com/mluo24/projectry"
-technologies: ["TypeScript", "Node", "React", "Firebase"]
+technologies: ["TypeScript", "Node.js", "Express", "React", "Firebase"]
 year: 2021
 ---
 
-This project was created as a final project for the course Trends in Web Dev.
+This was the final project for the course <Link href="https://webdev.cornelldti.org/" target="_blank">Trends in Web Development</Link>.
+
+The purpose of this project is for people who want to make rather short-term personal projects and need to enlist other people to help them. This was my first project using the Node, Express, React, and NoSQL stack, and the repo is a monorepo taking advantage of yarn workspaces and using the same packages.
+
+Planned features include a chat and user rating system.
