--- a/content/projects/zing.mdx
+++ b/content/projects/zing.mdx
@@ -1,8 +1,10 @@
 ---
 title: "Zing/Zing-LSC"
-githubLink: "https://github.com/mluo24/nuclear-siege"
-technologies: ["TypeScript", "React", "Node.js", "Firebase"]
-year: 2021
+githubLink: "https://github.com/cornell-dti/zing"
+technologies: ["TypeScript", "React", "Node.js", "Express", "Firebase"]
+year: 2022
 ---
 
 Will soon be rebranded to Grouper.
+
+Zing-LSC can be found <Link href="https://github.com/cornell-dti/zing-lsc" target="_blank">here</Link>.
