finished work experience

--- a/content/jobs/cornellcis.mdx
+++ b/content/jobs/cornellcis.mdx
@@ -6,6 +6,5 @@ endDate: "2022-01"
 isCurrent: true
 ---
 
-- Did some stuff
-- Also did some stuff
-- Again, did some stuff
+- Holding 3 consulting hours a week to help 6 students per hour with assignments, in addition to surge hours close to due dates (400+ students in class)
+- Grading assignments and exams and managing/assisting 2 groups for their final projects
