--- a/content/jobs/dti.mdx
+++ b/content/jobs/dti.mdx
@@ -6,6 +6,6 @@ endDate: "2022-02"
 isCurrent: true
 ---
 
-- Did some stuff
-- Also did some stuff
-- Again, did some stuff
+- Implementing match UI functionality on Zing, a tool for professors to intelligently form student groups
+- Adding partner data export function to CSV for Zing-LSC, a tool for pairing students with study partners
+- Upgrading React components to take advantage of MUI v5 system styling and theme capabilities
