finished majority of project content

--- a/content/projects/beontime.mdx
+++ b/content/projects/beontime.mdx
@@ -5,4 +5,8 @@ technologies: ["Python", "Flask"]
 year: 2021
 ---
 
-This was an app for a hackathon
+This mobile app was made for the <Link href="https://www.cornellappdev.com/courses/hack-challenge" target="_blank">AppDev Hack Challenge</Link>.
+Its purpose is for Cornell students to keep track of their courses and their respective assignments/tasks to simplify Canvas calendar and give more information than other traditional todo apps.
+
+I worked on the backend, an API made with Flask and the SQLAlchemy ORM, which offers authentication via Bearer token, various endpoints to add courses/assignments/tasks,
+and utilizes the <Link href="https://classes.cornell.edu/content/SP22/api-details" target="_blank">Cornell Course Roster API</Link> to get all the up-to-date courses for the semester.
