--- a/content/projects/cornell-simulator.mdx
+++ b/content/projects/cornell-simulator.mdx
@@ -5,6 +5,6 @@ technologies: ["OCaml"]
 year: 2021
 ---
 
-We did some really cool things in here that are worth talking about. Lolololol
+This was my final project for CS 3110: Functional Programming. The original game idea was for a Stardew Valley-esque game of a life simulator passing through each day doing tasks, but with the life of a Cornell student.
 
-Look at this markdown stuff!
+We used the OCaml graphics library and camlimages to create a robust tile/map engine to generate maps from spritesheets with a JSON, as well as layers for collision/interaction of items/map warps. Instead of passing time, we had a limited step counter and calculated a "GPA" at the end based on actions performed in the game.
