--- a/content/projects/scouting-server.mdx
+++ b/content/projects/scouting-server.mdx
@@ -5,6 +5,13 @@ technologies: ["PHP", "Laravel", "JavaScript"]
 year: 2020
 ---
 
-A lot of stuff done for the scouting server. We really did a lot for the <Link href="https://team1676.com/" underline="hover" target="_blank">Team 1676: The Pascack Pi-Oneers</Link>.
+This has been ongoing throughout high school (2016-2020), with each iteration improving from before and changing the fields for the game,
+developed for my school's robotics team, <Link href="https://team1676.com/" underline="hover" target="_blank">Team 1676: The Pascack Pi-Oneers</Link>, for team members to record
+information on robots and analyze it for strategic purposes. This was my first basis for web development, learning new tech stacks, working on a dev project with a team, leadership, and managing a long-term project.
 
-This has been an ongoing project since my freshman year of high school (2016) up until 2020 (graduation), with each iteration improving on the one from before.
+The 2020 specific version, in terms of technical changes, has a new UI that looks like the game field when rendered for ease of data input when scouting live games.
+The data querying was not worked upon due to the pandemic, but previous methods such as team comparisons and simple JSTable views are still possible.
+
+<!---
+https://team1676.com/scouting/
+-->
