--- a/content/projects/sharefolio.mdx
+++ b/content/projects/sharefolio.mdx
@@ -6,3 +6,5 @@ year: 2020
 ---
 
 This project has to do with making a portfolio of sorts. This started.
+
+As of 2021, I have extended it to use Django Rest Framework and making the frontend in React.
