--- a/content/projects/nuclear-siege.mdx
+++ b/content/projects/nuclear-siege.mdx
@@ -5,4 +5,6 @@ technologies: ["Java"]
 year: 2019
 ---
 
-This game was the final project for AP Computer Science.
+This game was my final project for AP Computer Science. The premise is a small shooter to protect a nuclear reactor from monsters.
+
+It was pretty much my first rather complete game, and it taught me a lot with sprites and animations, and I used an Animation class (that essentially utilizes a timer) to animate characters from a spritesheet. I also used the Animation class for implementing "immunity" frames so that constant contact would not automatically deplete the character's health.
