finished content for projects

--- a/content/projects/texttwister.mdx
+++ b/content/projects/texttwister.mdx
@@ -5,4 +5,7 @@ technologies: ["Java"]
 year: 2019
 ---
 
-This project was a game in Java
+This project was inspired by <Link href="https://www.wordplays.com/wordgames/text-twist" target="_blank">TextTwist</Link>, and was our high school computer science "hackathon" project.
+
+It takes advantage of Java Swing for the UI, which had challenges in making sure the layout could evenly fit all of the subsets of letter boxes, and it has all the features/keybinds of the original TextTwist, including clicking or typing for input,
+down arrow for playing the game, etc. Generating all of the subsets of words with the dictionary and updating the state of guessed words was a very interesting challenge.
