fixed project query (added link and full date)

--- a/content/projects/beontime.mdx
+++ b/content/projects/beontime.mdx
@@ -2,7 +2,7 @@
 title: "BeOnTime"
 githubLink: "https://github.com/mluo24/beontime"
 technologies: ["Python", "Flask"]
-year: 2021
+year: "2021-05"
 ---
 
 This mobile app was made for the <Link href="https://www.cornellappdev.com/courses/hack-challenge" target="_blank">AppDev Hack Challenge</Link>.
