--- a/content/projects/colorimetric-analysis.mdx
+++ b/content/projects/colorimetric-analysis.mdx
@@ -2,7 +2,7 @@
 title: "Colorimetric Analysis"
 githubLink: "https://github.com/mluo24/p-colorimetric-analysis"
 technologies: ["Python"]
-year: 2019
+year: "2019-01"
 ---
 
 This project won an honorable mention in computing awards at the NJ Regional Science Fair. My partner and I wanted to find exact concentrations of solutions without a spectrophotometer using semi-quantitative educational test kits.
