--- a/content/projects/projectry.mdx
+++ b/content/projects/projectry.mdx
@@ -2,7 +2,7 @@
 title: "Projectry"
 githubLink: "https://github.com/mluo24/projectry"
 technologies: ["TypeScript", "Node.js", "Express", "React", "Firebase"]
-year: 2021
+year: "2021-05"
 ---
 
 This was the final project for the course <Link href="https://webdev.cornelldti.org/" target="_blank">Trends in Web Development</Link>.
