--- a/content/projects/research.mdx
+++ b/content/projects/research.mdx
@@ -2,11 +2,11 @@
 title: "Bioinformatics Data"
 githubLink: "https://github.com/mluo24/research"
 technologies: ["HTML/CSS", "PHP", "MySQL"]
-year: 2018
+year: "2018-01"
 ---
 
 This was a project meant for data gathering for the research project, <em>Bioinformatics of Kinases to Elucidate the Evolution of Cell Signaling</em>, to hold data collected from BLAST databases.
 for the purpose of tracking cell signaling evolution of many organisms with the protein kinases of an <em>Arabidopsis</em> model organism.
 
-It is a basic CRUD app made with basic PHP and manually making connections to a database, and all the data can be viewed and exported easily based on what was needed for the graphs at the end of the project.
+It is a CRUD app made with PHP and manually making connections to a database, and all the data can be viewed and exported easily based on what was needed for the graphs at the end of the project.
 To view more about this, feel free to read our abstract <Link href="https://njrsf.org/cgi-bin/DisplayAbstract.pl?Project=BI.03&Yr=2018" target="_blank">abstract</Link>.
