--- a/content/projects/scouting-server.mdx
+++ b/content/projects/scouting-server.mdx
@@ -1,8 +1,9 @@
 ---
 title: "FRC Scouting Server"
-githubLink: "https://github.com/mluo24/CornellSimulator"
+githubLink: "https://github.com/mluo24/pascack-pioneers-scouting-2020"
+link: "https://team1676.com/scouting/"
 technologies: ["PHP", "Laravel", "JavaScript"]
-year: 2020
+year: "2020-01"
 ---
 
 This has been ongoing throughout high school (2016-2020), with each iteration improving from before and changing the fields for the game,
@@ -10,8 +11,5 @@ developed for my school's robotics team, <Link href="https://team1676.com/" unde
 information on robots and analyze it for strategic purposes. This was my first basis for web development, learning new tech stacks, working on a dev project with a team, leadership, and managing a long-term project.
 
 The 2020 specific version, in terms of technical changes, has a new UI that looks like the game field when rendered for ease of data input when scouting live games.
-The data querying was not worked upon due to the pandemic, but previous methods such as team comparisons and simple JSTable views are still possible.
+The data querying was not worked upon due to the pandemic, but previous methods such as team comparisons and simple <Link href="https://datatables.net/" target="_blank">DataTables</Link> views are still possible.
 
-<!---
-https://team1676.com/scouting/
--->
