--- a/content/projects/smite-discord-bot.mdx
+++ b/content/projects/smite-discord-bot.mdx
@@ -2,7 +2,7 @@
 title: "Smite Discord Bot"
 githubLink: "https://github.com/pdan101/smite-discord-bot"
 technologies: ["JavaScript", "Discord.js"]
-year: 2022
+year: "2022-02"
 ---
 
 This is my latest project, and it is a Discord bot that utilizes the public API of <Link href="https://www.smitegame.com/" target="_blank">Smite</Link>, a free-to-play cross platform MOBA.
