--- a/content/projects/texttwister.mdx
+++ b/content/projects/texttwister.mdx
@@ -2,7 +2,7 @@
 title: "TextTwister"
 githubLink: "https://github.com/mluo24/texttwister"
 technologies: ["Java"]
-year: 2019
+year: "2019-09"
 ---
 
 This project was inspired by <Link href="https://www.wordplays.com/wordgames/text-twist" target="_blank">TextTwist</Link>, and was our high school computer science "hackathon" project.
