--- a/content/projects/zing.mdx
+++ b/content/projects/zing.mdx
@@ -2,7 +2,7 @@
 title: "Zing/Zing-LSC"
 githubLink: "https://github.com/cornell-dti/zing"
 technologies: ["TypeScript", "React", "Node.js", "Express", "Firebase"]
-year: 2022
+year: "2022-01"
 ---
 
 This is my subteam on DTI, and what I have been focused on since joining DTI in Fall 2021. "Zing" is actually comprised of two products:
