--- a/content/projects/cornell-simulator.mdx
+++ b/content/projects/cornell-simulator.mdx
@@ -2,7 +2,7 @@
 title: "Cornell Simulator"
 githubLink: "https://github.com/mluo24/CornellSimulator"
 technologies: ["OCaml"]
-year: 2021
+year: "2021-04"
 ---
 
 This was my final project for CS 3110: Functional Programming. The original game idea was for a Stardew Valley-esque game of a life simulator passing through each day doing tasks, but with the life of a Cornell student.
