--- a/content/projects/nuclear-siege.mdx
+++ b/content/projects/nuclear-siege.mdx
@@ -2,7 +2,7 @@
 title: "Nuclear Siege"
 githubLink: "https://github.com/mluo24/nuclear-siege"
 technologies: ["Java"]
-year: 2019
+year: "2019-05"
 ---
 
 This game was my final project for AP Computer Science. The premise is a small shooter to protect a nuclear reactor from monsters.
