Updated work experience

--- a/content/jobs/cornellcis.mdx
+++ b/content/jobs/cornellcis.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Cornell"
+title: "Cornell Bowers CIS"
 role: "Data Structures and Functional Programming Consultant"
 startDate: "2021-06"
-endDate: "2022-01"
-isCurrent: true
+endDate: "2022-05"
+isCurrent: false
 ---
 
 - Holding 3 consulting hours a week to help 6 students per hour with assignments, in addition to surge hours close to due dates (400+ students in class)
