--- a/content/jobs/workstream.mdx
+++ b/content/jobs/workstream.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Workstream"
-role: "Software Engineering Intern"
+role: "Full-Stack Software Engineer Intern"
 startDate: "2021-06"
 endDate: "2021-08"
 isCurrent: false
