--- a/content/jobs/dti.mdx
+++ b/content/jobs/dti.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Cornell Design & Tech Initiative"
-role: "Software Developer"
+role: "Full-Stack Software Developer"
 startDate: "2021-06"
-endDate: "2022-02"
+endDate: "2022-06"
 isCurrent: true
 ---
 
